# SENTINEL-Vendor-Risk-Scoring-Engine

./: .env.example  .gitignore  ADR.md  CHANGELOG.md  Dockerfile  LICENSE  POWER_USER_GUIDE.txt  README.md  RUNBOOK.md  USAGE_GUIDE.txt  docker-compose.yml  main.py  pyproject.toml
data/: sample_responses.csv
src/vendor_risk_engine/: __init__.py  config.py  constants.py  exceptions.py  main.py
src/vendor_risk_engine/ai/: assessor.py
src/vendor_risk_engine/api/: app.py
src/vendor_risk_engine/auth/: service.py
src/vendor_risk_engine/connectors/: integration_manager.py
src/vendor_risk_engine/db/: __init__.py  database.py  models.py
src/vendor_risk_engine/export/: __init__.py  export_stage.py
src/vendor_risk_engine/ingestion/: __init__.py  ingestion_stage.py
src/vendor_risk_engine/models/: audit.py  questionnaire.py  report.py  response.py  rules.py  score.py
src/vendor_risk_engine/notifications/: __init__.py  webhook.py
src/vendor_risk_engine/reporting/: __init__.py  executive_summary.py  pdf_generator.py
src/vendor_risk_engine/rules/: iso27001_schema.yaml  nist_csf_schema.yaml  pci_dss_schema.yaml  questionnaire_schema.yaml  soc2_schema.yaml  threshold_config.yaml  weight_config.yaml
src/vendor_risk_engine/scoring/: __init__.py  advanced_analysis.py  classification_engine.py  compliance_mapper.py  continuous_monitoring.py  gap_analyzer.py  monte_carlo.py  (+4 more)
tests/: conftest.py  test_advanced_analysis.py  test_advanced_features.py  test_ai_assessor.py  test_api.py  test_continuous_monitoring.py  test_enterprise.py  test_scoring.py  test_webhook.py
(+8 files in other folders)
