[project]
name = "vendor_risk_engine"
version = "1.0.0"
description = "SENTINEL Vendor Risk Scoring Engine"
authors = [{ name = "System Architect" }]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "polars>=0.20.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.9"
]

[project.scripts]
sentinel = "vendor_risk_engine.main:app"

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "types-PyYAML",
    "types-openpyxl"
]
test = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "pytest-cov>=5.0.0",
    "aioresponses>=0.7.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
lint = { select = ["E", "F", "I", "UP", "B", "SIM"] }
